--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <title>
+        你问我这是啥？
+    </title>
+    我也不知道啊，可能是个静态博客吧
 </body>
 </html>
