--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>hello my dog</title>
 </head>
 <body>
     <title>
-        你问我这是啥？
+        use en?;
     </title>
-    我也不知道啊，可能是个静态博客吧
+    But I don't know en lol o.o!
 </body>
 </html>
